Working example with gradle functional test